--- a/pom.xml
+++ b/pom.xml
@@ -21,22 +21,17 @@
 			</resource>
 			<resource>
 				<directory>src/main/java</directory>
-				<excludes>
-					<exclude>**/*.properties</exclude>
-					<exclude>**/*.java</exclude>
-					<exclude>**/overview.html</exclude>
-					<exclude>**/package.html</exclude>
-				</excludes>
+				<includes>
+					<include>**/*.fxml</include>
+				</includes>
+			</resource>
+			<resource>
+				<directory>src/main/resources</directory>
 			</resource>
 		</resources>
 		<testResources>
 			<testResource>
-				<directory>src/test/java</directory>
-				<excludes>
-					<exclude>**/*.java</exclude>
-					<exclude>**/overview.html</exclude>
-					<exclude>**/package.html</exclude>
-				</excludes>
+				<directory>src/test/resources</directory>
 			</testResource>
 		</testResources>
 		<pluginManagement>
