color. Default BED color is read from BED file.

--- a/src/main/java/ca/qc/ircm/smoothing/service/BedParser.properties
+++ b/src/main/java/ca/qc/ircm/smoothing/service/BedParser.properties
@@ -3,6 +3,7 @@ track.pattern=track(?:\\s+\\w+=\\S*|\\s+\\w+=\\\"[^\\\"]*\\\")*
 track.attribute.pattern=(\\w+)=(?:\\\"([^\\\"]*)\\\"|(\\S*))
 track.type.WIGGLE=wiggle_0
 track.type.BED=wiggle_0
+color.pattern=(\\d+),(\\d+),(\\d+)
 chromosome.pattern=chr(.*)
 strand.pattern=[\\+\\-]
 strand.PLUS=+
