--- a/pom.xml
+++ b/pom.xml
@@ -1,15 +1,15 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<artifactId>lana-parent</artifactId>
-		<groupId>ca.qc.ircm.lana</groupId>
-		<version>4.4.0</version>
-		<relativePath>../lana-parent/pom.xml</relativePath>
+		<artifactId>coulombe-parent</artifactId>
+		<groupId>ca.qc.ircm.coulombe</groupId>
+		<version>5.0.0</version>
+		<relativePath>../coulombe-parent/pom.xml</relativePath>
 	</parent>
-  	<modelVersion>4.0.0</modelVersion>
-  	<artifactId>smoothing</artifactId>
-  	<version>1.0.0-SNAPSHOT</version>
-  	<name>smoothing</name>
-  	<description>Executes smoothing on some bed files</description>
+	<modelVersion>4.0.0</modelVersion>
+	<artifactId>smoothing</artifactId>
+	<version>1.0.0-SNAPSHOT</version>
+	<name>smoothing</name>
+	<description>Executes smoothing on some bed files</description>
 	<build>
 		<resources>
 			<resource>
@@ -136,6 +136,14 @@
 							</configuration>
 						</execution>
 					</executions>
+				</plugin>
+				<plugin>
+					<artifactId>maven-release-plugin</artifactId>
+					<version>2.4.2</version>
+					<configuration>
+						<goals>install</goals>
+						<tagNameFormat>@{project.version}</tagNameFormat>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
