--- a/src/main/java/ca/qc/ircm/smoothing/service/ExecutableService.properties
+++ b/src/main/java/ca/qc/ircm/smoothing/service/ExecutableService.properties
@@ -2,3 +2,4 @@ smoothing.WINDOWS.32=smoothing_32.exe
 smoothing.WINDOWS.64=smoothing_64.exe
 smoothing.WINDOWS_XP_OLDER.32=smoothing_32.exe
 smoothing.WINDOWS_XP_OLDER.64=smoothing_64.exe
+smoothing.MAC.64=smoothing_mac_64
