User is informed if smoothing does not process data correctly.
A warning is shown to the user if smoothing process an incorrect number
of chromosomes or an incorrect number of data.

--- a/src/main/java/ca/qc/ircm/smoothing/gui/mainpane.properties
+++ b/src/main/java/ca/qc/ircm/smoothing/gui/mainpane.properties
@@ -30,5 +30,6 @@ fileChooser.description=BED
 
 failed.title=Error while smoothing
 failed.message=An exception occurred
+warning.title=Smoothing completed with warnings
 succeeded.title=Smoothing completed
 succeeded.message=Smoothing completed
