--- a/src/main/java/ca/qc/ircm/smoothing/service/SmoothingService.properties
+++ b/src/main/java/ca/qc/ircm/smoothing/service/SmoothingService.properties
@@ -1,1 +1,3 @@
 file=Processing file {0}
+chromosomeCount.mismatch=Number of chromosomes processed by smoothing {1} does not match number of chromosomes {2} in file {0}
+rawDataCount.mismatch=Number of data processed by smoothing {1} does not match number of data {2} in file {0}
