Added SCM section in POM.

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,16 @@
 	<version>1.0.0-SNAPSHOT</version>
 	<name>smoothing</name>
 	<description>Executes smoothing on some bed files</description>
+	<scm>
+		<connection>scm:git:https://bitbucket.org/benoitcoulombelab/smoothing.git</connection>
+		<developerConnection>scm:git:https://bitbucket.org/benoitcoulombelab/smoothing.git</developerConnection>
+		<url>https://bitbucket.org/benoitcoulombelab/smoothing</url>
+		<tag>HEAD</tag>
+	</scm>
+	<issueManagement>
+		<system>Bitbucket</system>
+		<url>https://bitbucket.org/benoitcoulombelab/smoothing/issues</url>
+	</issueManagement>
 	<properties>
 		<javac.version>1.8</javac.version>
 		<mainClass>ca.qc.ircm.smoothing.Main</mainClass>
