--- a/pom.xml
+++ b/pom.xml
@@ -1,9 +1,9 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>coulombe-parent</artifactId>
-        <groupId>ca.qc.ircm.coulombe</groupId>
-        <version>9</version>
-        <relativePath>../coulombe-parent/pom.xml</relativePath>
+        <artifactId>ircm-parent</artifactId>
+        <groupId>ca.qc.ircm</groupId>
+        <version>2</version>
+        <relativePath>../ircm-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>smoothing</artifactId>
@@ -258,11 +258,6 @@
                         <reportsDirectory>${project.build.directory}/failsafe-reports</reportsDirectory>
                     </reportsDirectories>
                 </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.0</version>
             </plugin>
         </plugins>
     </reporting>
