Use Spring instead of Guice.

--- a/src/main/java/ca/qc/ircm/smoothing/gui/mainpane.properties
+++ b/src/main/java/ca/qc/ircm/smoothing/gui/mainpane.properties
@@ -1,3 +1,4 @@
+title=BED Smoothing ${project.version}
 validationError.title=Validation errors
 error.files.required=BED file is required
 error.files.notExists=Selected BED file {0} does not exists
