Fixes Spring Boot plugin's main class configuration.

--- a/pom.xml
+++ b/pom.xml
@@ -152,7 +152,7 @@
           <artifactId>spring-boot-maven-plugin</artifactId>
           <version>${spring-boot-maven-plugin.version}</version>
           <configuration>
-            <mainClass>${start-class}</mainClass>
+            <mainClass>${main-class}</mainClass>
           </configuration>
           <executions>
             <execution>
