--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <version>1.0.0-SNAPSHOT</version>
   <name>smoothing</name>
   <description>Executes smoothing on some bed files</description>
+  <url>http://bitbucket.org/ircm/smoothing</url>
   <scm>
     <connection>scm:git:git@bitbucket.org:ircm/smoothing.git</connection>
     <developerConnection>scm:git:git@bitbucket.org:ircm/smoothing.git</developerConnection>
@@ -24,6 +25,11 @@
   <properties>
     <javac.version>1.8</javac.version>
     <main-class>ca.qc.ircm.smoothing.Main</main-class>
+    <preloader-class>ca.qc.ircm.smoothing.MainPreloader</preloader-class>
+    <javafx.outfile>${project.build.finalName}-fx.jar</javafx.outfile>
+    <javafx.ant.classpath>${java.home}/../lib/ant-javafx.jar</javafx.ant.classpath>
+    <javafx.deploy.outdir>${project.build.directory}/deploy</javafx.deploy.outdir>
+    <fx.runtime></fx.runtime>
     <spring-boot.version>1.5.9.RELEASE</spring-boot.version>
     <afterburner.version>1.7.0</afterburner.version>
     <commons-io.version>2.6</commons-io.version>
@@ -31,6 +37,7 @@
     <commons-lang3.version>3.7</commons-lang3.version>
     <commons-exec.version>1.3</commons-exec.version>
     <findbugs.version>3.0.1</findbugs.version>
+    <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
     <spring-boot-maven-plugin.version>${spring-boot.version}</spring-boot-maven-plugin.version>
   </properties>
   <dependencyManagement>
@@ -152,6 +159,35 @@
           </configuration>
         </plugin>
         <plugin>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <executions>
+            <execution>
+              <id>copy-dependencies</id>
+              <goals><goal>copy-dependencies</goal></goals>
+              <configuration>
+                <includeScope>runtime</includeScope>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
+          <artifactId>maven-antrun-plugin</artifactId>
+          <executions>
+            <execution>
+              <id>create-javafx-jar</id>
+              <goals><goal>run</goal></goals>
+              <phase>package</phase>
+              <configuration>
+                <target>
+                  <ant antfile="javafx-build.xml">
+                    <target name="deploy"/>
+                  </ant>
+                </target>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
+        <plugin>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
           <version>${spring-boot-maven-plugin.version}</version>
@@ -176,6 +212,12 @@
         <artifactId>maven-javadoc-plugin</artifactId>
       </plugin>
       <plugin>
+        <artifactId>maven-dependency-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <artifactId>maven-antrun-plugin</artifactId>
+      </plugin>
+      <plugin>
         <groupId>org.codehaus.mojo</groupId>
         <artifactId>buildnumber-maven-plugin</artifactId>
       </plugin>
@@ -185,4 +227,16 @@
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <id>java9</id>
+      <activation>
+        <jdk>9</jdk>
+      </activation>
+      <properties>
+        <java9>true</java9>
+        <javafx.ant.classpath>${java.home}/lib/ant-javafx.jar</javafx.ant.classpath>
+      </properties>
+    </profile>
+  </profiles>
 </project>
