--- a/pom.xml
+++ b/pom.xml
@@ -180,7 +180,9 @@
               <configuration>
                 <target>
                   <property name="project.organization.name" value="${project.organization.name}"/>
+                  <property name="project.name" value="${project.name}"/>
                   <property name="project.url" value="${project.url}"/>
+                  <property name="project.description" value="${project.description}"/>
                   <ant antfile="javafx-build.xml">
                     <target name="deploy"/>
                   </ant>
