--- a/pom.xml
+++ b/pom.xml
@@ -181,6 +181,7 @@
                 <target>
                   <property name="project.organization.name" value="${project.organization.name}"/>
                   <property name="project.name" value="${project.name}"/>
+                  <property name="project.version" value="${project.version}"/>
                   <property name="project.url" value="${project.url}"/>
                   <property name="project.description" value="${project.description}"/>
                   <ant antfile="javafx-build.xml">
