--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
     <commons-exec.version>1.3</commons-exec.version>
     <findbugs.version>3.0.1</findbugs.version>
     <exec-maven-plugin.version>1.6.0</exec-maven-plugin.version>
+    <javafx-maven-plugin.version>8.8.3</javafx-maven-plugin.version>
     <spring-boot-maven-plugin.version>${spring-boot.version}</spring-boot-maven-plugin.version>
   </properties>
   <dependencyManagement>
@@ -205,6 +206,47 @@
           </executions>
         </plugin>
         <plugin>
+          <groupId>com.zenjava</groupId>
+          <artifactId>javafx-maven-plugin</artifactId>
+          <version>${javafx-maven-plugin.version}</version>
+          <configuration>
+            <mainClass>${main-class}</mainClass>
+            <preLoader>${preloader-class}</preLoader>
+            <identifier>${project.groupId}.${project.name}</identifier>
+            <nativeReleaseVersion>${project.version}</nativeReleaseVersion>
+            <appName>${project.name}</appName>
+            <verbose>true</verbose>
+            <manifestAttributes>
+              <Implementation-Title>${project.name}</Implementation-Title>
+              <Implementation-Version>${project.version}</Implementation-Version>
+              <Implementation-Vendor>${project.organization.name}</Implementation-Vendor>
+              <Implementation-Vendor-Id>${project.groupId}</Implementation-Vendor-Id>
+              <Implementation-Build>${buildNumber}</Implementation-Build>
+              <Implementation-URL>${project.url}</Implementation-URL>
+              <Built-By>${user.name}</Built-By>
+              <Build-Jdk>${java.version}</Build-Jdk>
+              <X-Compile-Source-JDK>${javac.version}</X-Compile-Source-JDK>
+              <X-Compile-Target-JDK>${javac.version}</X-Compile-Target-JDK>
+            </manifestAttributes>
+          </configuration>
+          <executions>
+           <execution>
+             <id>create-javafx-jar</id>
+             <phase>package</phase>
+             <goals>
+               <goal>build-jar</goal>
+             </goals>
+           </execution>
+           <execution>
+             <id>create-native</id>
+             <phase>package</phase>
+             <goals>
+               <goal>build-native</goal>
+             </goals>
+           </execution>
+          </executions>
+        </plugin>
+        <plugin>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
           <version>${spring-boot-maven-plugin.version}</version>
@@ -231,8 +273,14 @@
       <plugin>
         <artifactId>maven-dependency-plugin</artifactId>
       </plugin>
+      <!--
       <plugin>
         <artifactId>maven-antrun-plugin</artifactId>
+      </plugin>
+      -->
+      <plugin>
+        <groupId>com.zenjava</groupId>
+        <artifactId>javafx-maven-plugin</artifactId>
       </plugin>
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -263,7 +311,7 @@
         </os>
       </activation>
       <properties>
-        <javafx.icon>${project.basedir}/src/main/icons/ircm-logo.png</javafx.icon>
+        <javafx.icon>${project.basedir}/src/main/deploy/package/linux/smoothing.png</javafx.icon>
       </properties>
     </profile>
     <profile>
@@ -274,7 +322,7 @@
         </os>
       </activation>
       <properties>
-        <javafx.icon>${project.basedir}/src/main/icons/ircm-logo.ico</javafx.icon>
+        <javafx.icon>${project.basedir}/src/main/deploy/package/windows/smoothing.ico</javafx.icon>
       </properties>
     </profile>
     <profile>
@@ -285,7 +333,7 @@
         </os>
       </activation>
       <properties>
-        <javafx.icon>${project.basedir}/src/main/icons/ircm-logo.icns</javafx.icon>
+        <javafx.icon>${project.basedir}/src/main/deploy/package/macosx/smoothing.icns</javafx.icon>
       </properties>
     </profile>
   </profiles>
