--- a/pom.xml
+++ b/pom.xml
@@ -1,3 +1,21 @@
+<!--
+
+    Copyright (c) 2015 Institut de recherches cliniques de Montreal (IRCM)
+
+    This program is free software: you can redistribute it and/or modify
+    it under the terms of the GNU General Public License as published by
+    the Free Software Foundation, either version 3 of the License, or
+    (at your option) any later version.
+
+    This program is distributed in the hope that it will be useful,
+    but WITHOUT ANY WARRANTY; without even the implied warranty of
+    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+    GNU General Public License for more details.
+
+    You should have received a copy of the GNU General Public License
+    along with this program. If not, see <http://www.gnu.org/licenses/>.
+
+-->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
@@ -12,6 +30,7 @@
   <name>smoothing</name>
   <description>Executes smoothing on some bed files</description>
   <url>http://bitbucket.org/ircm/smoothing</url>
+  <inceptionYear>2015</inceptionYear>
   <licenses>
     <license>
       <name>GNU General Public License, version 3</name>
@@ -216,6 +235,33 @@
               </goals>
             </execution>
           </executions>
+        </plugin>
+        <plugin>
+          <groupId>com.mycila</groupId>
+          <artifactId>license-maven-plugin</artifactId>
+          <configuration>
+            <headerDefinitions>
+              <headerDefinition>src/license/javacomment_style.xml</headerDefinition>
+            </headerDefinitions>
+            <mapping>
+              <java>JAVACOMMENT_STYLE</java>
+              <fxml>XML_STYLE</fxml>
+            </mapping>
+            <excludes>
+              <exclude>**/.*</exclude>
+              <exclude>**/*.txt</exclude>
+              <exclude>**/*.log</exclude>
+              <exclude>**/*.log.*</exclude>
+              <exclude>src/main/resources/executables/**</exclude>
+              <exclude>**/*.icns</exclude>
+              <exclude>**/*.bed</exclude>
+            </excludes>
+            <executions>
+              <execution>
+                <goals><goal>check</goal></goals>
+              </execution>
+            </executions>
+          </configuration>
         </plugin>
       </plugins>
     </pluginManagement>
