--- a/src/main/java/ca/qc/ircm/smoothing/service/SmoothingService.properties
+++ b/src/main/java/ca/qc/ircm/smoothing/service/SmoothingService.properties
@@ -1,3 +1,20 @@
+#
+# Copyright (c) 2015 Institut de recherches cliniques de Montreal (IRCM)
+#
+# This program is free software: you can redistribute it and/or modify
+# it under the terms of the GNU General Public License as published by
+# the Free Software Foundation, either version 3 of the License, or
+# (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program. If not, see <http://www.gnu.org/licenses/>.
+#
+
 file=Processing file {0}
 chromosomeCount.mismatch=Number of chromosomes processed by smoothing {1} does not match number of chromosomes {2} in file {0}
 rawDataCount.mismatch=Number of data processed by smoothing {1} does not match number of data {2} in file {0}
