--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,7 @@
     <commons-lang3.version>3.7</commons-lang3.version>
     <commons-exec.version>1.3</commons-exec.version>
     <findbugs.version>3.0.1</findbugs.version>
+    <javafx-11.version>11.0.2</javafx-11.version>
     <spring-boot-maven-plugin.version>${spring-boot.version}</spring-boot-maven-plugin.version>
   </properties>
   <dependencyManagement>
@@ -242,4 +243,23 @@
       </plugin>
     </plugins>
   </build>
+  <profiles>
+    <profile>
+      <activation>
+        <jdk>11</jdk>
+      </activation>
+      <dependencies>
+        <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-controls</artifactId>
+          <version>${javafx-11.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.openjfx</groupId>
+          <artifactId>javafx-fxml</artifactId>
+          <version>${javafx-11.version}</version>
+        </dependency>
+      </dependencies>
+    </profile>
+  </profiles>
 </project>
