--- a/pom.xml
+++ b/pom.xml
@@ -19,10 +19,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>ircm-parent</artifactId>
+    <artifactId>parent</artifactId>
     <groupId>ca.qc.ircm</groupId>
-    <version>4</version>
-    <relativePath>../ircm-parent/pom.xml</relativePath>
+    <version>6</version>
+    <relativePath>../parent/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
   <artifactId>smoothing</artifactId>
