--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ca.qc.ircm</groupId>
-    <version>6</version>
+    <version>7</version>
     <relativePath>../parent/pom.xml</relativePath>
   </parent>
   <modelVersion>4.0.0</modelVersion>
@@ -57,7 +57,7 @@
     <commons-vfs2.version>2.2</commons-vfs2.version>
     <commons-lang3.version>3.7</commons-lang3.version>
     <commons-exec.version>1.3</commons-exec.version>
-    <findbugs.version>3.0.1</findbugs.version>
+    <spotbugs.version>4.0.0-beta1</spotbugs.version>
     <javafx-11.version>11.0.2</javafx-11.version>
     <spring-boot-maven-plugin.version>${spring-boot.version}</spring-boot-maven-plugin.version>
   </properties>
@@ -131,9 +131,9 @@
       <version>${afterburner.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.google.code.findbugs</groupId>
-      <artifactId>annotations</artifactId>
-      <version>${findbugs.version}</version>
+      <groupId>com.github.spotbugs</groupId>
+      <artifactId>spotbugs-annotations</artifactId>
+      <version>${spotbugs.version}</version>
     </dependency>
   </dependencies>
   <build>
