--- a/src/main/java/ca/qc/ircm/smoothing/service/ExecutableService.properties
+++ b/src/main/java/ca/qc/ircm/smoothing/service/ExecutableService.properties
@@ -20,3 +20,4 @@ smoothing.WINDOWS.64=smoothing_64.exe
 smoothing.WINDOWS_XP_OLDER.32=smoothing_32.exe
 smoothing.WINDOWS_XP_OLDER.64=smoothing_64.exe
 smoothing.MAC.64=smoothing_mac_64
+smoothing.LINUX.64=smoothing_linux_64
