Fixes organization.name property name in POM.

--- a/pom.xml
+++ b/pom.xml
@@ -69,7 +69,7 @@
     <jpackage.options.mac>${project.build.directory}/classes/jpackage/mac.txt</jpackage.options.mac>
     <jpackage.options.linux>${project.build.directory}/classes/jpackage/linux.txt</jpackage.options.linux>
     <jpackage.options>${jpackage.options.windows}</jpackage.options>
-    <copyright>Copyright (c) ${project.inceptionYear} ${organization.name}</copyright>
+    <copyright>Copyright (c) ${project.inceptionYear} ${project.organization.name}</copyright>
     <icon.windows>${project.basedir}/src/main/resources/icons/smoothing.ico</icon.windows>
     <icon.mac>${project.basedir}/src/main/resources/icons/smoothing.icns</icon.mac>
     <icon.linux>${project.basedir}/src/main/resources/icons/smoothing.png</icon.linux>
