--- a/pom.xml
+++ b/pom.xml
@@ -50,7 +50,7 @@
   </issueManagement>
   <properties>
     <resource.delimiter>$[*]</resource.delimiter>
-    <javac.version>1.8</javac.version>
+    <javac.version>17</javac.version>
     <main-class>ca.qc.ircm.smoothing.Main</main-class>
     <spring-boot.version>2.2.4.RELEASE</spring-boot.version>
     <afterburner.version>1.7.0</afterburner.version>
@@ -59,7 +59,6 @@
     <commons-lang3.version>3.7</commons-lang3.version>
     <commons-exec.version>1.3</commons-exec.version>
     <spotbugs.version>4.0.0-beta1</spotbugs.version>
-    <javafx-14.version>14-ea+1</javafx-14.version>
     <spring-boot-maven-plugin.version>${spring-boot.version}</spring-boot-maven-plugin.version>
     <javafx.finalName>${project.build.finalName}.jar</javafx.finalName>
     <jpackage>${java.home}/bin/jpackage</jpackage>
@@ -125,6 +124,26 @@
     <dependency>
       <groupId>org.yaml</groupId>
       <artifactId>snakeyaml</artifactId>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>${javac.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-fxml</artifactId>
+      <version>${javac.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-web</artifactId>
+      <version>${javac.version}</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-swing</artifactId>
+      <version>${javac.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
@@ -357,38 +376,6 @@
     </plugins>
   </build>
   <profiles>
-    <profile>
-      <id>java14</id>
-      <activation>
-        <jdk>14</jdk>
-      </activation>
-      <dependencies>
-        <dependency>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-controls</artifactId>
-          <version>${javafx-14.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-fxml</artifactId>
-          <version>${javafx-14.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-web</artifactId>
-          <version>${javafx-14.version}</version>
-        </dependency>
-        <dependency>
-          <groupId>org.openjfx</groupId>
-          <artifactId>javafx-swing</artifactId>
-          <version>${javafx-14.version}</version>
-        </dependency>
-      </dependencies>
-      <properties>
-        <!-- Fails in Java 14-ea+1 -->
-        <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
-      </properties>
-    </profile>
     <profile>
       <id>windows</id>
       <activation>
