Fixes packaging for Mac.

--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,7 @@
     <jpackage.options.mac>${project.build.directory}/classes/jpackage/mac.txt</jpackage.options.mac>
     <jpackage.options.linux>${project.build.directory}/classes/jpackage/linux.txt</jpackage.options.linux>
     <jpackage.options>${jpackage.options.windows}</jpackage.options>
+    <app.version>${project.version}</app.version>
     <copyright>Copyright (c) ${project.inceptionYear} ${project.organization.name}</copyright>
     <icon.windows>${project.basedir}/src/main/resources/icons/smoothing.ico</icon.windows>
     <icon.mac>${project.basedir}/src/main/resources/icons/smoothing.icns</icon.mac>
@@ -330,7 +331,7 @@
                 </goals>
                 <phase>validate</phase>
                 <configuration>
-                  <name>win.version</name>
+                  <name>app.version</name>
                   <value>${project.version}</value>
                   <regex>^(\d+)(\.\d+)?(\.\d+)?(-SNAPSHOT)?$</regex>
                   <replacement>$1$2$3</replacement>
