--- a/pom.xml
+++ b/pom.xml
@@ -17,7 +17,7 @@
 
 -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
     <artifactId>parent</artifactId>
     <groupId>ca.qc.ircm</groupId>
@@ -95,24 +95,15 @@
   </dependencyManagement>
   <dependencies>
     <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.mockito</groupId>
-      <artifactId>mockito-core</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework</groupId>
-      <artifactId>spring-test</artifactId>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
+      <exclusions>
+        <exclusion>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+        </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -264,7 +255,7 @@
               </goals>
               <configuration>
                 <target>
-                  <echo message="Copy jar for jpackage" />
+                  <echo message="Copy jar for jpackage"/>
                   <copy file="${project.build.directory}/${javafx.finalName}" todir="${jpackage.input}"></copy>
                 </target>
               </configuration>
@@ -315,7 +306,9 @@
           </configuration>
           <executions>
             <execution>
-              <goals><goal>check</goal></goals>
+              <goals>
+                <goal>check</goal>
+              </goals>
             </execution>
           </executions>
         </plugin>
@@ -323,21 +316,21 @@
           <groupId>org.codehaus.mojo</groupId>
           <artifactId>build-helper-maven-plugin</artifactId>
           <version>${build-helper-maven-plugin.version}</version>
-            <executions>
-              <execution>
-                <id>format-windows-product-version</id>
-                <goals>
-                  <goal>regex-property</goal>
-                </goals>
-                <phase>validate</phase>
-                <configuration>
-                  <name>app.version</name>
-                  <value>${project.version}</value>
-                  <regex>^(\d+)(\.\d+)?(\.\d+)?(-SNAPSHOT)?$</regex>
-                  <replacement>$1$2$3</replacement>
-                </configuration>
-              </execution>
-            </executions>
+          <executions>
+            <execution>
+              <id>format-windows-product-version</id>
+              <goals>
+                <goal>regex-property</goal>
+              </goals>
+              <phase>validate</phase>
+              <configuration>
+                <name>app.version</name>
+                <value>${project.version}</value>
+                <regex>^(\d+)(\.\d+)?(\.\d+)?(-SNAPSHOT)?$</regex>
+                <replacement>$1$2$3</replacement>
+              </configuration>
+            </execution>
+          </executions>
         </plugin>
       </plugins>
     </pluginManagement>
@@ -423,7 +416,7 @@
     <profile>
       <id>app-image</id>
       <properties>
-	    <jpackage.options.linux>${project.build.directory}/classes/jpackage/linux-app-image.txt</jpackage.options.linux>
+        <jpackage.options.linux>${project.build.directory}/classes/jpackage/linux-app-image.txt</jpackage.options.linux>
       </properties>
     </profile>
   </profiles>
