--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
     <resource.delimiter>$[*]</resource.delimiter>
     <javac.version>17</javac.version>
     <main-class>ca.qc.ircm.smoothing.Main</main-class>
-    <spring-boot.version>2.2.4.RELEASE</spring-boot.version>
+    <spring-boot.version>2.4.13</spring-boot.version>
     <afterburner.version>1.7.0</afterburner.version>
     <commons-io.version>2.6</commons-io.version>
     <commons-vfs2.version>2.2</commons-vfs2.version>
@@ -98,12 +98,6 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
       <scope>test</scope>
-      <exclusions>
-        <exclusion>
-          <groupId>junit</groupId>
-          <artifactId>junit</artifactId>
-        </exclusion>
-      </exclusions>
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
