--- a/pom.xml
+++ b/pom.xml
@@ -29,7 +29,7 @@
   <version>1.0.0-SNAPSHOT</version>
   <name>smoothing</name>
   <description>Executes smoothing on some bed files</description>
-  <url>http://bitbucket.org/ircm/smoothing</url>
+  <url>https://github.com/francoisrobertlab/smoothing</url>
   <inceptionYear>2015</inceptionYear>
   <licenses>
     <license>
