--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
     <commons-vfs2.version>2.2</commons-vfs2.version>
     <commons-lang3.version>3.7</commons-lang3.version>
     <commons-exec.version>1.3</commons-exec.version>
-    <spotbugs.version>4.0.0-beta1</spotbugs.version>
+    <spotbugs.version>4.6.0</spotbugs.version>
     <spring-boot-maven-plugin.version>${spring-boot.version}</spring-boot-maven-plugin.version>
     <javafx.finalName>${project.build.finalName}.jar</javafx.finalName>
     <jpackage>${java.home}/bin/jpackage</jpackage>
