--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
     <url>https://github.com/francoisrobertlab/smoothing/issues</url>
   </issueManagement>
   <properties>
-    <resource.delimiter>$[*]</resource.delimiter>
+    <resource.delimiter>@</resource.delimiter>
     <javac.version>17</javac.version>
     <main-class>ca.qc.ircm.smoothing.Main</main-class>
     <spring-boot.version>2.4.13</spring-boot.version>
