--- a/src/main/java/ca/qc/ircm/smoothing/gui/mainpane.properties
+++ b/src/main/java/ca/qc/ircm/smoothing/gui/mainpane.properties
@@ -15,7 +15,7 @@
 # along with this program. If not, see <http://www.gnu.org/licenses/>.
 #
 
-title=BED Smoothing $[project.version]
+title=BED Smoothing @project.version@
 validationError.title=Validation errors
 error.files.required=BED file is required
 error.files.notExists=Selected BED file {0} does not exists
