--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <parent>
-    <artifactId>parent</artifactId>
-    <groupId>ca.qc.ircm</groupId>
-    <version>10</version>
-    <relativePath>../parent/pom.xml</relativePath>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-parent</artifactId>
+    <version>2.4.13</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
+  <groupId>ca.qc.ircm</groupId>
   <artifactId>smoothing</artifactId>
   <version>1.0.0-SNAPSHOT</version>
   <name>smoothing</name>
@@ -32,16 +32,14 @@
   </issueManagement>
   <properties>
     <resource.delimiter>@</resource.delimiter>
-    <javac.version>17</javac.version>
-    <main-class>ca.qc.ircm.smoothing.Main</main-class>
-    <spring-boot.version>2.4.13</spring-boot.version>
+    <java.version>17</java.version>
+    <start-class>ca.qc.ircm.smoothing.Main</start-class>
     <afterburner.version>1.7.0</afterburner.version>
     <commons-io.version>2.11.0</commons-io.version>
     <commons-vfs2.version>2.9.0</commons-vfs2.version>
     <commons-lang3.version>3.7</commons-lang3.version>
     <commons-exec.version>1.3</commons-exec.version>
     <spotbugs.version>4.6.0</spotbugs.version>
-    <spring-boot-maven-plugin.version>${spring-boot.version}</spring-boot-maven-plugin.version>
     <javafx.finalName>${project.build.finalName}.jar</javafx.finalName>
     <jpackage>${java.home}/bin/jpackage</jpackage>
     <jpackage.skip>true</jpackage.skip>
@@ -64,17 +62,6 @@
     <linux.app.release>1</linux.app.release>
     <build-helper-maven-plugin.version>3.0.0</build-helper-maven-plugin.version>
   </properties>
-  <dependencyManagement>
-    <dependencies>
-      <dependency>
-        <groupId>org.springframework.boot</groupId>
-        <artifactId>spring-boot-dependencies</artifactId>
-        <version>${spring-boot.version}</version>
-        <type>pom</type>
-        <scope>import</scope>
-      </dependency>
-    </dependencies>
-  </dependencyManagement>
   <dependencies>
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -83,35 +70,27 @@
     </dependency>
     <dependency>
       <groupId>org.springframework.boot</groupId>
-      <artifactId>spring-boot-configuration-processor</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.yaml</groupId>
-      <artifactId>snakeyaml</artifactId>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
-      <version>${javac.version}</version>
+      <version>${java.version}</version>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-fxml</artifactId>
-      <version>${javac.version}</version>
+      <version>${java.version}</version>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-web</artifactId>
-      <version>${javac.version}</version>
+      <version>${java.version}</version>
     </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-swing</artifactId>
-      <version>${javac.version}</version>
+      <version>${java.version}</version>
     </dependency>
     <dependency>
       <groupId>commons-io</groupId>
@@ -208,10 +187,6 @@
         <plugin>
           <groupId>org.springframework.boot</groupId>
           <artifactId>spring-boot-maven-plugin</artifactId>
-          <version>${spring-boot-maven-plugin.version}</version>
-          <configuration>
-            <mainClass>${main-class}</mainClass>
-          </configuration>
           <executions>
             <execution>
               <goals>
@@ -292,8 +267,8 @@
         <artifactId>maven-dependency-plugin</artifactId>
       </plugin>
       <plugin>
-        <groupId>org.codehaus.mojo</groupId>
-        <artifactId>buildnumber-maven-plugin</artifactId>
+        <groupId>pl.project13.maven</groupId>
+        <artifactId>git-commit-id-plugin</artifactId>
       </plugin>
       <plugin>
         <groupId>org.springframework.boot</groupId>
