Updates maven GitHub action.

--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -34,9 +34,14 @@ jobs:
         uses: actions/setup-java@v3
         with:
           java-version: '17'
-          distribution: 'temurin'
+          distribution: 'liberica'
+          java-package: jdk+fx
           cache: maven
       - name: Setup headless display
-        uses: pyvista/setup-headless-display-action@v1
+        uses: pyvista/setup-headless-display-action@v4.1
       - name: Build with Maven
         run: mvn -B package --file pom.xml
+
+      # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
+      - name: Update dependency graph
+        uses: advanced-security/maven-dependency-submission-action@v5
